[package]
name = "git-crypt"
version = "0.1.0"
edition = "2021"
authors = ["AprilNEA"]
description = "A Rust implementation of git-crypt for transparent encryption of files in a git repository"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AprilNEA/git-crypt-rs"
homepage = "https://github.com/AprilNEA/git-crypt-rs"
documentation = "https://docs.rs/git-crypt"
readme = "README.md"
keywords = ["git", "encryption", "aes", "security", "cryptography"]
categories = ["command-line-utilities", "cryptography"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
gpg = ["sequoia-openpgp"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Cryptography
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"

# GPG (optional)
sequoia-openpgp = { version = "1.21", optional = true }

# Git operations
git2 = "0.19"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.22"

# I/O
dirs = "5.0"

[[bin]]
name = "git-crypt"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3.13"
assert_cmd = "2.0"
predicates = "3.1"
